<resources>
    <string name="app_name">Playlist maker</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme_label">Темная тема</string>


    <string name="track_cover">Обложка трека</string>
    <string name="search_empty_message">Ничего не нашлось</string>
    <string name="search_error_message">Проблемы со связью.</string>
    <string name="loader_message">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>

    <string name="search_retry_button">Обновить</string>
    <string name="artwork_description">Album artwork</string>
    <string name="media_library">Медиатека</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app_label">Поделиться приложением</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_label">Написать в поддержку</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="terms_label">Пользовательское соглашение</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="back">Назад</string>
    <string name="share_icon_desc">Поделиться</string>
    <string name="dark_theme_switch_desc">Включить или выключить тёмную тему</string>
    <string name="support_icon_desc">Поддержка</string>
    <string name="support">Поддержка</string>
    <string name="loading">Загрузка...</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="arrow_right_desc">Перейти</string>
    <string name="share_message">Посмотрите крутое приложение для создания плейлистов: https://practicum.yandex.ru/</string>
    <string name="support_email">support@playlistmaker.com</string>
    <string name="email_subject">Сообщение разработчикам Playlist maker</string>
    <string name="email_text">Здравствуйте!\n\nОпишите вашу проблему или предложение:\n\n\n\nС уважением,\n[Ваше имя]</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_subject">Рекомендую курс по Android-разработке</string>
    <string name="terms_url">https://practicum.yandex.ru/offer/</string>
</resources>