<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginBottom="24dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:text="@string/search"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_icon_padding"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/button_corner_radius" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_library"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:text="@string/library"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_icon_padding"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/button_corner_radius"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_settings"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/button_corner_radius"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint="@color/black" />

    </LinearLayout>
</LinearLayout>

