<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorSurface"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="?attr/colorOnSurface"
        app:title="@string/search"
        app:titleTextColor="?attr/colorOnSurface" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bg_edittext_rounded"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="12dp"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="48dp"
            android:paddingBottom="16dp"
            android:singleLine="true"
            android:textColor="@color/text_search"
            android:textColorHint="@color/gray_search"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="-14dp"
            android:contentDescription="@string/clear_search"
            android:padding="8dp"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            app:tint="@color/gray_search" />
    </FrameLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar_circular"
        android:visibility="gone"
        android:contentDescription="@string/loading" />
    <!-- Заголовок истории -->
    <TextView
        android:id="@+id/historyTitle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="Вы искали"
        android:textColor="?attr/colorOnSurface"
        android:textSize="19sp"
        android:textStyle="bold"
        android:visibility="gone" />
    <!-- RecyclerView для истории поиска -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
        android:visibility="gone" />

    <!-- Кнопка очистки истории -->
    <com.google.android.material.button.MaterialButton

        android:id="@+id/clearHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:minHeight="56dp"
        app:backgroundTint="@color/button_retry_bg"
        android:textColor="@color/button_retry_text"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:text="Очистить историю"
        app:cornerRadius="18dp"
        app:iconTint="@color/button_icon_color"

        android:visibility="gone" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/emptyPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:alpha="1"
            android:src="@drawable/ic_music_empty"

             />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search_empty_message"
            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:alpha="1"
            android:src="@drawable/light_mode"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"

            android:text="@string/loader_message"

            android:textColor="?attr/colorOnSurface"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            app:backgroundTint="@color/button_retry_bg"
            android:textColor="@color/button_retry_text"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="@string/search_retry_button"
            app:cornerRadius="@dimen/button_corner_radius"
            app:iconTint="@color/button_icon_color"
            />

    </LinearLayout>

</LinearLayout>